--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build: ./server
     container_name: match-server
     restart: unless-stopped
-    expose:
-      - "8080"
+    ports:
+      - "8080:8080"
     networks:
       - game-net
 
